[package]
name = "qoi-viewer"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qoi = "0.4.0"
clap = { version = "3.1.18", features = ["derive"] }
winit = "0.26.1"
winit_input_helper = "0.12.0"
pixels = "0.9.0"
